--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -745,6 +745,12 @@ ul.chat-list li.chat-list-item ul.chat-list-item-messages li {
 	float: left;
 }
 
+.hide {
+  display: none;
+  opacity: 0;
+  visibility: hidden;
+}
+
 .center {
 	display:table;
 	margin: 0 auto;
@@ -760,40 +766,96 @@ ul.chat-list li.chat-list-item ul.chat-list-item-messages li {
 
 /* Videos */
 ul.videos {
-
+  width: 100%;
 }
 ul.videos li.videos-item {
-
+  height: auto;
+  /* position: relative; */
+  float: right;
+}
+ul.videos li.videos-item.videos-item-normal {
+  width: 300px;
+  margin-left: 10px;
+  margin-right: 10px;
+}
+ul.videos li.videos-item.videos-item-wide {
+  width: 100%;
+}
+ul.videos li.videos-item.videos-item-normal:last-child {
+  /* margin-right: 0px !important; */
+}
+ul.videos li.videos-item.videos-item-normal:first-child {
+  /* margin-left: 0px !important; */
+}
+ul.videos li.videos-item,
+ul.videos li.videos-item .videos-item-back,
+ul.videos li.videos-item .videos-item-back video,
+ul.videos li.videos-item .videos-item-front {
+    border-radius: 15px;
 }
 ul.videos li.videos-item .videos-item-back {
-  
+  /* width: 100%; */
+  /* height: 100%; */
+  /* background-color: red; */
 }
 ul.videos li.videos-item .videos-item-back video {
-  
+  width: 100%;
+  height: 100%;
 }
 ul.videos li.videos-item .videos-item-front {
-  
+  position: relative;
+  left: 0;
+  bottom: 0;
+  z-index: 20;
+  width: 100%;
+  margin-top: -60px;
+  margin-bottom: 70px;
 }
 ul.videos li.videos-item .videos-item-front .videos-item-namebox {
-  
+  margin-right: 20px;
+  width: auto;
+  height: 35px;
+  line-height: 35px;
+  padding-left: 10px;
+  padding-right: 10px;
+  background-color: #595540a4;
+  border-radius: 7px;
+  color: white;
 }
 ul.videos li.videos-item .videos-item-front .videos-item-namebox label.name {
-  
+  font-size: 14px;
+}
+ul.videos li.videos-item .videos-item-front .videos-item-namebox .status-icon {
+  margin-top: 15px;
+  margin-left: 9px;
 }
 .status-icon {
-  
+  width: 5px;
+  height: 5px;
+  border-radius: 50%;
 }
 .status-icon-online {
-  
+  background-color: #19e366;
 }
 .status-icon-offline {
-  
+  background-color: #e39019;
 }
 ul.videos li.videos-item .videos-item-front .videos-item-controllers {
-  
+  margin-left: 20px;
+  width: 25px;
+  height: 29px;
+  background-color: #5d594a;
+  width: auto;
+  text-align: center;
+  padding-top: 4px;
+  padding-left: 7px;
+  padding-right: 7px;
+  border-radius: 6px;
 }
 ul.videos li.videos-item .videos-item-front .videos-item-controllers svg {
+  fill: white;
   display: none;
+  width: 20px;
 }
 ul.videos li.videos-item .videos-item-front .videos-item-controllers svg.active {
   display: block;
