remove the input text when you pres submit btn

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -780,7 +780,7 @@ ul.videos li.videos-item.videos-item-normal {
   margin-right: 10px;
 }
 ul.videos li.videos-item.videos-item-wide {
-  width: 100%;
+  width: calc(100% - 20px);
 }
 ul.videos li.videos-item.videos-item-normal:last-child {
   /* margin-right: 0px !important; */
