--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -688,6 +688,7 @@ ul.chat-list li.chat-list-item ul.chat-list-item-messages li {
   margin-bottom: 9px;
   padding: 8px;
   padding-bottom: 0px;
+  color: #aeb0c5;
 }
 .submit-message {
   padding: 10px;
